vlib/v/checker/tests/mut_receiver.out
vlib/v/checker/tests/mut_receiver.vv:5:4: warning: use `(mut f Foo)` instead of `(f mut Foo)`
    3 |     name string
    4 | }
    5 | fn (f mut Foo) info() {
      |    ~~~~~~~~~~~
    6 |     f.name = 'foo'
    7 | }
vlib/v/checker/tests/mut_receiver.vv:5:7: error: unexpected `mut`
    3 |     name string
    4 | }
    5 | fn (f mut Foo) info() {
      |       ~~~
    6 |     f.name = 'foo'
    7 | }
